Fri Jul 09 07:42:31 GMT 2010  Olly Betts <olly@survex.com>

	* tests/perftest/perftest.cc: I missed a use of atoi() on std::string
	  but just call .cstr() on the string instead of dragging in utils.h.

Fri Jul 09 04:39:40 GMT 2010  Olly Betts <olly@survex.com>

	* common/utils.cc,common/utils.h: Remove unused std::string to const
	  char * wrappers for standard functions, and remove the only use of
	  rmdir()'s wrapper.

Thu Jul 08 15:18:04 GMT 2010  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Xapian::ESet is a reference counted handle, so it
	  is efficient to return by value - remove FIXME which suggests we
	  should avoid doing so.

Thu Jul 08 15:17:20 GMT 2010  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc: Update FIXMEs - it's too late to fix stuff
	  in 1.1.x!

Thu Jul 08 15:13:47 GMT 2010  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Remove FIXMEs about debug logging which have been
	  addressed by the fairly recent debug logging improvements.

Thu Jul 08 15:07:07 GMT 2010  Olly Betts <olly@survex.com>

	* api/keymaker.cc: Fix comment typos.

Thu Jul 08 14:50:59 GMT 2010  Olly Betts <olly@survex.com>

	* api/replication.cc,backends/brass/,backends/chert/,
	  backends/dbfactory_remote.cc,backends/flint/,
	  backends/remote/remote-database.cc,bin/xapian-progsrv.cc,
	  bin/xapian-tcpsrv.cc,common/,net/,tests/perftest/perftest.cc,
	  tests/perftest/perftest.h: Replace use of OmTime with a double
	  holding a count in seconds since the epoch.

Thu Jul 08 12:35:40 GMT 2010  Olly Betts <olly@survex.com>

	* net/tcpclient.cc: Retry select() if it fails with EINTR while waiting
	  for connect(), and discriminate cases with same failure message to
	  aid debugging.

Thu Jul 08 05:09:18 GMT 2010  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Remove comment left over from the
	  "boolean exclusive" work.

Wed Jul 07 13:18:17 GMT 2010  Olly Betts <olly@survex.com>
